--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,45 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+:root{
+  --squares: 16;
+}
+
+.App {
+  margin: 3% auto auto;
+  width: 50%;
+}
+
+.box {
+  height: 600px;
+  width: 700px;
+  display: grid;
+  grid-template-columns: repeat(var(--squares), 1fr);
+  margin: auto;
+}
+
+.square {
+  min-height: calc(var(--squares) / 100%);
+  min-width: calc(var(--squares) / 100%);
+  border: 1px solid black;
+}
+
+.checked-blck {
+  min-height: calc(var(--squares) / 100%);
+  min-width: calc(var(--squares) / 100%);
+  border: 1px solid black;
+  background-color: black;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  padding: 2px;
+  margin-bottom: 20px;
+  margin-left: 20px;
+}
